Use pdflatex as required by AltaCV

--- a/.github/workflows/compile_latex.yml
+++ b/.github/workflows/compile_latex.yml
@@ -33,11 +33,11 @@ jobs:
           # The working directory for the LaTeX engine
           # working_directory: # optional
           # The LaTeX engine to be invoked
-          # compiler: # optional, default is latexmk
+          compiler: pdflatex # optional, default is latexmk
           # Extra arguments to be passed to the LaTeX engine
           # args: # optional, default is -pdf -file-line-error -halt-on-error -interaction=nonstopmode
           # [Deprecated] Install extra packages by tlmgr
-          extra_packages: biber, pdflatex
+          # extra_packages: biber, pdflatex
           # Install extra packages by apk
           # extra_system_packages: # optional
           # Arbitrary bash codes to be executed before compiling LaTeX documents
