Correct file name

--- a/data.yml
+++ b/data.yml
@@ -9,7 +9,7 @@ colorscheme:
 personalinfo:
     name: Your Name Here
     tagline: Your Position or Tagline Here
-    photo: Globe_High
+    photo: Globe_High.png
     email: your_name@email.com
     phone: 000-00-0000
     mailaddress: Åddrésş, Street, 00000 Cóuntry
