--- a/.github/workflows/compile_latex.yml
+++ b/.github/workflows/compile_latex.yml
@@ -13,6 +13,23 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.8'
+      - name: Generate fragments
+        run: |
+          git checkout -B pdf
+          pip install -r requirements.txt
+          python generate_tex.py
+      - name: Upload fragments to branch pdf
+        uses: stefanzweifel/git-auto-commit-action@v4.5.1
+        with:
+          commit_user_name: "Huy-Ngo"
+          commit_user_email: "duchuy29092000@gmail.com"
+          commit_author: "Huy-Ngo <duchuy29092000@gmail.com>"
+          commit_message: "Generate LaTeX fragments"
+          push_options: '--force'
+          branch: png
       - name: Download TeXLive
         run: |
           echo "deb http://ftp.fi.debian.org/debian/ buster main contrib non-free" >> /etc/apt/sources.list.d
